Development history / change log, please read from bottom up

Version 3.4.2 - xx yyy 2020
Generic changes/fixes
	*
Device specific changes/fixes
	* iChargerUSB - enable program memory control
	* GPS_Logger* - fix latitude, longitude unit which caused display problem while activated
	* Spektrum-Telemetry - make frame loss and holds always visible, even no reasonable data

Version 3.4.1 - 03 Feb 2020
Generic changes/fixes
	* add control listener to handle size changes after modifying menu cool bar
	* uniform build execution environment to Java 8 compatible byte code
	* split build in OS dependent steps (future MAC OS does not support 32 bit makensis processing)
	* update swt.jar for Linux 64 bit to fix webkit problems
	* add time stamp of min/max value evaluated
	* update swt.jar for available OS to support future Java versions (new SWT libs available for 64 bit only)
	* update cell voltages for the known different cell types
	* fix missing synchronization between cell voltages and active record set
	* update software widget toolkit (swt) for 64 bit systems to enable support for newer Java run times 

Device specific changes/fixes
	* LiPoWatch - adapt clear memory button position for MAC OS X and Linux
	* Robbe PowerPeak IV - initial implementation
	* HoTTAdapter2 - reset min/max values while detecting valid values
	* SpektrumCSV - simple sample to be used with exports from TLM Viewer
	* Spektrum-Telemetry - add initial implementation

Version 3.4.0 - 10 Nov 2019
Generic changes/fixes
	* update launch4j Windows executable wrapper supporting java PATH entries in addition to registry
	* enable secondary trigger to extend primary trigger range -> require XSD upgrade
	* add additional comment placeholder for motor capacity for cases with sumByTriggerReferenceOrdinal.

Device specific changes/fixes
	* JetiAdapter - fix backward compatibility skipping sensor parameter without unit, result as missing measurement
	* JetiAdapter - enhance Tx->Rx statistics