@@ -393,7 +393,7 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 							@Override
 							public void widgetSelected(SelectionEvent evt) {
 								CellVoltageValuesDialog.log.logp(Level.FINEST, CellVoltageValuesDialog.$CLASS_NAME, $METHOD_NAME, "upperLimitVoltageCombo.widgetSelected, event=" + evt); //$NON-NLS-1$
-								CellVoltageValuesDialog.this.voltageLimits[0] = Integer.valueOf(CellVoltageValuesDialog.this.upperLimitVoltageCombo.getText().replace(".", "")); //$NON-NLS-1$ //$NON-NLS-2$
+								CellVoltageValuesDialog.this.voltageLimits[0] = Integer.valueOf(CellVoltageValuesDialog.this.upperLimitVoltageCombo.getText().replace(".", "").replace(",", "")); //$NON-NLS-1$ //$NON-NLS-2$
 								CellVoltageValuesDialog.log.info("upperLimitVoltage = " + CellVoltageValuesDialog.this.voltageLimits[0]); //$NON-NLS-1$
 							}
 						});
@@ -416,7 +416,7 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 							@Override
 							public void widgetSelected(SelectionEvent evt) {
 								CellVoltageValuesDialog.log.logp(Level.FINEST, CellVoltageValuesDialog.$CLASS_NAME, $METHOD_NAME, "upperLimitColorRedCombo.widgetSelected, event=" + evt); //$NON-NLS-1$
-								CellVoltageValuesDialog.this.voltageLimits[1] = Integer.valueOf(CellVoltageValuesDialog.this.upperLimitColorRedCombo.getText().replace(".", "")); //$NON-NLS-1$ //$NON-NLS-2$
+								CellVoltageValuesDialog.this.voltageLimits[1] = Integer.valueOf(CellVoltageValuesDialog.this.upperLimitColorRedCombo.getText().replace(".", "").replace(",", "")); //$NON-NLS-1$ //$NON-NLS-2$
 								CellVoltageValuesDialog.log.info("upperLimitColorRed = " + CellVoltageValuesDialog.this.voltageLimits[1]); //$NON-NLS-1$
 							}
 						});
@@ -439,7 +439,7 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 							@Override
 							public void widgetSelected(SelectionEvent evt) {
 								CellVoltageValuesDialog.log.logp(Level.FINEST, CellVoltageValuesDialog.$CLASS_NAME, $METHOD_NAME, "lowerLimitColorGreenCombo.widgetSelected, event=" + evt); //$NON-NLS-1$
-								CellVoltageValuesDialog.this.voltageLimits[2] = Integer.valueOf(CellVoltageValuesDialog.this.lowerLimitColorGreenCombo.getText().replace(".", "")); //$NON-NLS-1$ //$NON-NLS-2$
+								CellVoltageValuesDialog.this.voltageLimits[2] = Integer.valueOf(CellVoltageValuesDialog.this.lowerLimitColorGreenCombo.getText().replace(".", "").replace(",", "")); //$NON-NLS-1$ //$NON-NLS-2$
 								CellVoltageValuesDialog.log.info("lowerLimitColorGreen = " + CellVoltageValuesDialog.this.voltageLimits[2]); //$NON-NLS-1$
 							}
 						});
@@ -462,7 +462,7 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 							@Override
 							public void widgetSelected(SelectionEvent evt) {
 								CellVoltageValuesDialog.log.logp(Level.FINEST, CellVoltageValuesDialog.$CLASS_NAME, $METHOD_NAME, "beginSpreadVoltageCombo.widgetSelected, event=" + evt); //$NON-NLS-1$
-								CellVoltageValuesDialog.this.voltageLimits[3] = Integer.valueOf(CellVoltageValuesDialog.this.beginSpreadVoltageCombo.getText().replace(".", "")); //$NON-NLS-1$ //$NON-NLS-2$
+								CellVoltageValuesDialog.this.voltageLimits[3] = Integer.valueOf(CellVoltageValuesDialog.this.beginSpreadVoltageCombo.getText().replace(".", "").replace(",", "")); //$NON-NLS-1$ //$NON-NLS-2$
 								CellVoltageValuesDialog.log.info("beginSpreadVoltage = " + CellVoltageValuesDialog.this.voltageLimits[3]); //$NON-NLS-1$
 							}
 						});
@@ -485,7 +485,7 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 							@Override
 							public void widgetSelected(SelectionEvent evt) {
 								CellVoltageValuesDialog.log.logp(Level.FINEST, CellVoltageValuesDialog.$CLASS_NAME, $METHOD_NAME, "lowerLimitRedColorCombo.widgetSelected, event=" + evt); //$NON-NLS-1$
-								CellVoltageValuesDialog.this.voltageLimits[4] = Integer.valueOf(CellVoltageValuesDialog.this.lowerLimitColorRedCombo.getText().replace(".", "")); //$NON-NLS-1$ //$NON-NLS-2$
+								CellVoltageValuesDialog.this.voltageLimits[4] = Integer.valueOf(CellVoltageValuesDialog.this.lowerLimitColorRedCombo.getText().replace(".", "").replace(",", "")); //$NON-NLS-1$ //$NON-NLS-2$
 								CellVoltageValuesDialog.log.info("lowerLimitColorRed = " + CellVoltageValuesDialog.this.voltageLimits[4]); //$NON-NLS-1$
 							}
 						});
@@ -508,7 +508,7 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 							@Override
 							public void widgetSelected(SelectionEvent evt) {
 								CellVoltageValuesDialog.log.logp(Level.FINEST, CellVoltageValuesDialog.$CLASS_NAME, $METHOD_NAME, "lowerLimitVoltageCombo.widgetSelected, event=" + evt); //$NON-NLS-1$
-								CellVoltageValuesDialog.this.voltageLimits[5] = Integer.valueOf(CellVoltageValuesDialog.this.lowerLimitVoltageCombo.getText().replace(".", "")); //$NON-NLS-1$ //$NON-NLS-2$
+								CellVoltageValuesDialog.this.voltageLimits[5] = Integer.valueOf(CellVoltageValuesDialog.this.lowerLimitVoltageCombo.getText().replace(".", "").replace(",", "")); //$NON-NLS-1$ //$NON-NLS-2$
 								CellVoltageValuesDialog.log.info("lowerLimitVoltage = " + CellVoltageValuesDialog.this.voltageLimits[5]); //$NON-NLS-1$
 							}
 						});
@@ -551,10 +551,10 @@ public class CellVoltageValuesDialog extends org.eclipse.swt.widgets.Dialog {
 	 */
 	int matchValueToSelection(CCombo combo, int value) {
 		String[] comboValues = combo.getItems();
-		String strValue = String.format(Locale.ENGLISH, "%.3f", (value/1000.0));
+		String strValue = String.format(Locale.ENGLISH, "%d", value);
 		int index = 0;
 		for (; index < comboValues.length; ++index) {
-			if (comboValues[index].equals(strValue)) break;
+			if (comboValues[index].replace(".", "").replace(",", "").equals(strValue)) break;
 		}
 		return index;
 	}
